# Flux

./: CLAUDE.md  Flux Language Spec.docx  README.md  README.zh-CN.md  实现方案
.claude/: settings.json
.claude/skills/: code-understanding.md
docs/: design-comparison.md
flux/: CMakeLists.txt  README.md
flux/examples/: ai_demo.flux  apc_pentest.flux  bench.cpp  bench_pure.flux  bench_vm.flux  concurrency_demo.flux  hello.flux  jit_test.flux  language_demo.flux  migrate_demo.flux  module_demo.flux  new_features_demo.flux  persistent_demo.flux  self_host.flux  self_host_compiler.flux  spec_v1_demo.flux  stdlib_demo.flux  stdlib_demo2.flux  supervisor_demo.flux  test_array_interp_forin.flux  test_default.flux  test_keyword.flux  types_demo.flux
flux/src/: apc.h  ast.h  codegen.h  compiler.cpp  compiler.h  concurrency.h  debugger.h  docgen.h  fluz.h  formatter.h  gc.h  hir.h  hotswap.h  hw.h  interpreter.cpp  interpreter.h  jit.h  lexer.cpp  lexer.h  linter.h  llvm_jit.cpp  llvm_jit.h  lsp.h  main.cpp  mir.h  parser.cpp  parser.h  pkgmgr.cpp  pkgmgr.h  profiler.h  stdlib.cpp  taint.h  threadpool.h  token.h  toml.h  typechecker.cpp  typechecker.h  vm.cpp  vm.h  watcher.cpp  (+1 more)
fluxos/: .gitignore  Makefile  boot.asm  flux_interp.asm  fluxos_flat.asm  kernel.asm  kernel.flux  linker.ld  multitask.asm  test_interp_stub.asm
vscode-flux/: extension.js  language-configuration.json  package.json
vscode-flux/snippets/: flux.json
vscode-flux/syntaxes/: flux.tmLanguage.json
